Mon Sep 13 21:33:40 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_x509name.c (ossl_x509name_to_s): add optional
	  second argument to specify the output format (see also
	   X509_NAME_print_ex).

	* ext/openssl/ossl_x509name.c (ossl_x509name_init): new constants:
	  OpenSSL::X509::Name::COMPAT, OpenSSL::X509::Name::RFC2253,
	  OpenSSL::X509::ONELINE, OpenSSL::X509::MULTILINE.

	* ext/openssl/lib/openssl/x509.rb (OpenSSL::X509::Name::RFC2253DN):
	  new module to provide the parse for RFC2253 DN format.

	* ext/openssl/lib/openssl/x509.rb (OpenSSL::X509::Name.parse_rfc2253):
	  new method to parse RFC2253 DN format.

Mon Sep 13 19:16:33 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* eval.c (blk_copy_prev): need frame_dup().  [ruby-dev:24103]

Mon Sep 13 16:23:27 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/multi-tk.rb: MultiTkIp.new_master and new_slave accept
	  safe-level value argument

Mon Sep 13 10:48:37 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_getpid): don't need to use _getpid() on
	  mswin32 and mingw32.

Mon Sep 13 10:22:05 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* object.c (nil_inspect): fix typo.

Mon Sep 13 09:29:58 2004  Minero Aoki  <aamine@loveruby.net>

	* ext/ripper/depend: (nmake hack) prepend "./" to ripper.c to
	  avoid {$(srcdir)}.

Mon Sep 13 06:43:42 2004  Minero Aoki  <aamine@loveruby.net>

	* ext/ripper/tools/list-parse-event-ids.rb: does not use getopts.

	* ext/ripper/tools/list-scan-event-ids.rb: ditto.

Mon Sep 13 02:42:28 2004  Minero Aoki  <aamine@loveruby.net>

	* ext/Setup: add ripper.

	* ext/Setup.atheos: ditto.

	* ext/Setup.dj: ditto.

	* ext/Setup.emx: ditto.

	* ext/Setup.nt: ditto.

	* ext/Setup.x68: ditto.

Mon Sep 13 02:26:31 2004  Minero Aoki  <aamine@loveruby.net>

	* ext/ripper: ripper extention added.

	* ext/ripper/MANIFEST: new file.

	* ext/ripper/README: new file.

	* ext/ripper/depend: new file.

	* ext/ripper/extconf.rb: new file.
