@@ -267,6 +267,7 @@ sample/encstr_usage.rb
 sample/iso2022-kr.txt
 sample/menubar1.rb
 sample/menubar2.rb
+sample/multi-ip_sample.rb
 sample/optobj_sample.rb
 sample/propagate.rb
 sample/remote-ip_sample.rb
